gcl (2.6.1-24) unstable; urgency=low

  * Revert unixport/makefile link order fix for windows, breaks
    compiler::link, find another way
  * runtime SGC fault recovery test

 -- Camm Maguire <camm@enhanced.com>  Thu, 12 Feb 2004 05:22:06 +0000

gcl (2.6.1-23) unstable; urgency=low

  * Remove calls to init-readline with new automatic readline setup

 -- Camm Maguire <camm@enhanced.com>  Tue, 27 Jan 2004 20:27:20 +0000

gcl (2.6.1-22) unstable; urgency=low

  * Build depend on emacs21 | emacsen

 -- Camm Maguire <camm@enhanced.com>  Fri, 23 Jan 2004 22:01:15 +0000

gcl (2.6.1-21) unstable; urgency=low

  * Automatic readline initialization
  * Add watch file
  * Prevent circular error loops
  * Prevent automatic optimization added to CFLAGS by autoconf
  * Rework documentation installation in and outside of Debian
  * Support user deined predicates at an elementary level in the form
    '(satisfies foop) in gcl_predlib.lsp
  * Install binary gcd algorithm for ~10% performance increase
  * Rescale some default allocation parameters -- bignum allocation by
    relblocks by default, default growth parameters are 1 (min),
    0.1*MAXPAGE (max), 0.5 (increase), 0.3 (percent free), holepage is
    4*MAXPAGE/1024, INIT_HOLEPAGE, INIT_NRBPAGE and RB_GETA scale
    accordingly
  * Clean windows/sysdir.bat
  * Check for zero args in new gcd code
  * Default hole is maxpages/10, holesize configure option added
  * Fix syntax errors in older reloaction code: sfaslelf.c

 -- Camm Maguire <camm@enhanced.com>  Fri, 16 Jan 2004 16:57:50 +0000

gcl (2.6.1-20) unstable; urgency=low

  * Fix gcl-doc doc-base files

 -- Camm Maguire <camm@enhanced.com>  Tue, 30 Dec 2003 22:30:39 +0000

gcl (2.6.1-19) unstable; urgency=low

  * Fix bug in compiler::c2labels in which *ccb-vs* was missing a ocal
    rebind
  * Remove duplicate tags from compiled C switch statements
  * Minor merges for DARWIN support
  * Path to configure to make --enable-emacsdir work