@@ -270,3 +270,18 @@ char *lisp_copy_to_null_terminated();
 
 int
 gcl_init_cmp_anon(void);
+
+#undef SAFE_READ
+#undef SAFE_FREAD
+#ifdef SGC
+#define SAFE_READ(a_,b_,c_) \
+   ({int _a=(a_),_c=(c_);char *_b=(b_);extern int sgc_enabled;\
+     if (sgc_enabled) memset(_b,0,_c);read(_a,_b,_c);})
+#define SAFE_FREAD(a_,b_,c_,d_) \
+   ({int _b=(b_),_c=(c_);char *_a=(a_);FILE *_d=(d_);extern int sgc_enabled; \
+     if (sgc_enabled) memset(_a,0,_b*_c);fread(_a,_b,_c,_d);})
+#else
+#define SAFE_READ(a_,b_,c_) read((a_),(b_),(c_))
+#define SAFE_FREAD(a_,b_,c_,d_) fread((a_),(b_),(c_),(d_))
+#endif
+
