@@ -45,7 +45,7 @@ struct node * find_sym();
 int node_compare();
 #ifndef _WIN32
 void *malloc();
-char *bsearch();
+void *bsearch();
 #endif
 
 struct reloc relocation_info;
@@ -254,7 +254,7 @@ SEEK_TO_END_OFILE(fp);
 	dprintf( code size %d , datasize+textsize+bsssize + extra_bss);
 	if (fseek(fp,N_TXTOFF(fileheader) ,0) < 0)
 		FEerror("file seek error",0,0);
-	fread(the_start, textsize + datasize, 1, fp);
+	SAFE_FREAD(the_start, textsize + datasize, 1, fp);
 	dprintf(read into memory text +data %d bytes, textsize + datasize);
 /* relocate the actual loaded text  */
 
