@@ -3,8 +3,10 @@ gcl (2.6.1-24) unstable; urgency=low
   * Revert unixport/makefile link order fix for windows, breaks
     compiler::link, find another way
   * runtime SGC fault recovery test
+  * Protect read/fread in case SGC is enabled with safe (restartable)
+    versions
 
- -- Camm Maguire <camm@enhanced.com>  Thu, 12 Feb 2004 05:22:06 +0000
+ -- Camm Maguire <camm@enhanced.com>  Thu, 12 Feb 2004 05:23:21 +0000
 
 gcl (2.6.1-23) unstable; urgency=low
 
